--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,19 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
-        <header>
-            <div id="logo">
-                <a href="#/">
-                    <div id="logo-header">Garden<span class="asterix">*</span>spruce</div>
-                    <div id="logo-sub">Garden design by the hour in Seattle</div>
-                </a>
-            </div>
+        <header class="header">
+            <a class="logo" href="#/">
+                Garden Spruce
+            </a>
+            <a href="#/service" class="header-link">How it works</a>
+            <a href="#/magazine" class="header-link">The magazine</a>
+            <a href="#/login" class="header-link flt-right" id="login-link">Log In</a>
+            <a href="#/logout" class="header-link flt-right" id="logout-link">Log Out</a>
+            <a href="#/dashboard" role="button" class="btn dashboard-link header-link">Dashboard</a>
         </header>
-        <nav>
-            <a href="#/service">The service</a>
-            <a href="#/magazine">The magazine</a>
-            <a href="#/login" id="login-link" class="flt-right">Log In</a>
-            <a href="#/logout" id="logout-link" class="flt-right">Log Out</a>
-            <a href="#/signup" class="btn-link btn-primary signup-link">Book a Designer</a>
-            <a href="#/dashboard" class="btn-link btn-primary dashboard-link">Dashboard</a>
-        </nav>
-        <section id="page">
-        </section>
-        <footer>
-            <section class="flex">
+        <div class="section" id="page"></div>
+        <footer class="section flex">
                 <a href="#/about">About</a>
-                <a href="#/designers">Design Careers</a>
-                <a href="#/signup" class="btn-link btn-primary signup-link flt-right">Book a Designer</a>
-                <a href="#/dashboard" class="btn-link btn-primary dashboard-link flt-right">Dashboard</a>
-            </section>
         </footer>
         <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
         <script>
