--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     </head>
     <body>
         <header class="header">
@@ -31,6 +32,7 @@
         <script src="pages/home.js"></script>
         <script src="pages/about.js"></script>
         <script src="pages/dashboard.js"></script>
+        <script src="pages/post.js"></script>
         <script src="pages/mag.js"></script>
         <script src="pages/login.js"></script>
         <script src="pages/logout.js"></script>
