--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
             <a href="#/logout" class="header-link flt-right" id="logout-link">Log Out</a>
             <a href="#/dashboard" role="button" class="btn dashboard-link header-link">Dashboard</a>
         </header>
-        <div class="section" id="page"></div>
+        <div id="page"></div>
         <footer class="section flex">
-                <a href="#/about">About</a>
+                <a href="#/about" class="footer-link">About</a>
         </footer>
         <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
         <script>
