--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Asar" rel="stylesheet">
     </head>
     <body>
         <header class="header">
@@ -29,6 +30,7 @@
         };
         firebase.initializeApp(config);
         </script>
+        <script src="auth.js"></script>
         <script src="pages/home.js"></script>
         <script src="pages/about.js"></script>
         <script src="pages/dashboard.js"></script>
@@ -41,6 +43,5 @@
         <script src="pages/service.js"></script>
         <script src="pages/editor.js"></script>
         <script src="router.js"></script>
-        <script src="auth.js"></script>
     </body>
 </html>
