more cleanup but need to get query params working again

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
             </a>
             <a href="#/service" class="header-link">How it works</a>
             <a href="#/magazine" class="header-link">The magazine</a>
-            <a href="#/login" class="header-link flt-right" id="login-link">Log In</a>
-            <a href="#/logout" class="header-link flt-right" id="logout-link">Log Out</a>
+            <a href="#/login" class="header-link flt-right login-link" id="login-link">Log In</a>
+            <a href="#/logout" class="header-link flt-right logout-link" id="logout-link">Log Out</a>
             <a href="#/dashboard" role="button" class="btn dashboard-link header-link">Dashboard</a>
         </header>
         <div id="page"></div>
