--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         <script src="pages/post.js"></script>
         <script src="pages/mag.js"></script>
         <script src="pages/login.js"></script>
+        <script src="pages/create-account.js"></script>
         <script src="pages/logout.js"></script>
         <script src="pages/signup.js"></script>
         <script src="pages/service.js"></script>
