starting to fix router but now need to make sure login link works

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             apiKey: "AIzaSyBVZBRxfwG3Q8zN4gjjuqYO829lhqmtDGQ",
             authDomain: "gardenspruce-1f48a.firebaseapp.com",
             databaseURL: "https://gardenspruce-1f48a.firebaseio.com",
-            storageBucket: "",
+            storageBucket: "gs://gardenspruce-1f48a.appspot.com",
         };
         firebase.initializeApp(config);
         </script>
