--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <body>
         <header class="header">
             <a class="logo" href="#/">
-                Garden Spruce
+                Garden<br>
+                Spruce
             </a>
             <a href="#/service" class="header-link">How it works</a>
             <a href="#/magazine" class="header-link">The magazine</a>
