--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
         <div id="page"></div>
         <footer class="section flex">
                 <a href="#/about" class="footer-link">About</a>
+                <a href="#/terms" class="footer-link">Terms</a>
+                <a href="#/contact" class="footer-link">Contact</a>
         </footer>
         <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
         <script>
@@ -41,6 +43,8 @@
         <script src="pages/signup.js"></script>
         <script src="pages/service.js"></script>
         <script src="pages/editor.js"></script>
+        <script src="pages/terms.js"></script>
+        <script src="pages/contact.js"></script>
         <script src="router.js"></script>
     </body>
 </html>
