--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
             </a>
             <a href="#/about" class="header-link">About</a>
             <a href="#/service" class="header-link">How It Works</a>
-            <a href="#/magazine" class="header-link">Portfolio</a>
+            <a href="#/portfolio" class="header-link">Portfolio</a>
             <a href="#/login" class="header-link flt-right login-link" id="login-link">Log In</a>
             <a href="#/logout" class="header-link flt-right logout-link" id="logout-link">Log Out</a>
             <a href="#/dashboard" role="button" class="btn dashboard-link header-link">Dashboard</a>
@@ -68,6 +68,7 @@
         <script src="pages/dashboard.js"></script>
         <script src="pages/post.js"></script>
         <script src="pages/mag.js"></script>
+        <script src="pages/portfolio.js"></script>
         <script src="pages/login.js"></script>
         <script src="pages/create-account.js"></script>
         <script src="pages/logout.js"></script>
