--- a/www/index.html
+++ b/www/index.html
@@ -1,16 +1,19 @@
 <html>
     <head>
+        <title>Garden Spruce</title>
+        <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Jaldi" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
-        <header class="header">
+        <header class="header col12">
             <a class="logo" href="#/">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 447.91 92.7">
+                Garden Spruce
+                <!--<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 447.91 92.7">
                     <defs>
                         <style>.cls-1{fill:none;}.cls-1,.cls-4{stroke:#000;stroke-miterlimit:10;stroke-width:1.9px;}.cls-2{clip-path:url(#clip-path);}.cls-3,.cls-4{fill:#fff;}</style>
                         <clipPath id="clip-path"><circle class="cls-1" cx="37.5" cy="42.44" r="36.55"/></clipPath>
                     </defs>
-                    <title>Asset 1</title><g id="Layer_2" data-name="Layer 2">
                     <g id="Layer_1-2" data-name="Layer 1"><g class="cls-2">
                         <circle class="cls-1" cx="69.34" cy="60.41" r="31.33" transform="translate(-12.19 17.86) rotate(-13.5)"/>
                         <path class="cls-1" d="M26.4,49.39A31.21,31.21,0,0,1,38.87,67.73"/>
@@ -37,17 +40,17 @@
                         <path d="M421.25,54.32h1.29q-2,6.83-10,6.83A11.75,11.75,0,0,1,404,57.66a12.45,12.45,0,0,1-3.5-9.23,12.7,12.7,0,0,1,3.78-9.55,12.41,12.41,0,0,1,8.94-3.66,12.15,12.15,0,0,1,5.71,1.36q2.61,1.36,2.61,3.33a2.25,2.25,0,0,1-.48,1.38,1.63,1.63,0,0,1-1.39.64q-1.93,0-2.37-2.26a4.41,4.41,0,0,0-1.08-2.37,4.65,4.65,0,0,0-3-.67,6.82,6.82,0,0,0-5.9,2.72q-2,2.72-2,8.2,0,5.65,2.12,8.85a7.2,7.2,0,0,0,6.43,3.19Q419.67,59.6,421.25,54.32Z"/>
                         <path d="M447.91,44.3H431.19q-.12,1.73-.12,2.58,0,6.33,2,9.51a6.5,6.5,0,0,0,5.9,3.18,7.73,7.73,0,0,0,7.56-4.78h1.41a8.19,8.19,0,0,1-3.72,4.67,11.65,11.65,0,0,1-11.82.15,12.29,12.29,0,0,1-4.44-4.35,12.79,12.79,0,0,1-1.73-6.83A13.71,13.71,0,0,1,429.54,39a10.7,10.7,0,0,1,8.35-3.76,9.3,9.3,0,0,1,7.29,2.87A9.81,9.81,0,0,1,447.91,44.3Zm-5.13-1.17a9.4,9.4,0,0,0,.09-1.2,5,5,0,0,0-5.21-5.42q-5.33,0-6.36,6.62Z"/>
                     </g></g>
-                </svg>
+                </svg>-->
             </a>
-            <a href="#/about" class="header-link">About</a>
+            <a href="#/about" class="header-link flt-right">About</a>
             <a href="#/service" class="header-link">How It Works</a>
             <a href="#/portfolio" class="header-link">Portfolio</a>
-            <a href="#/login" class="header-link flt-right login-link" id="login-link">Log In</a>
-            <a href="#/logout" class="header-link flt-right logout-link" id="logout-link">Log Out</a>
+            <a href="#/login" class="header-link login-link" id="login-link">Log In</a>
+            <a href="#/logout" class="header-link logout-link" id="logout-link">Log Out</a>
             <a href="#/dashboard" role="button" class="btn dashboard-link header-link">Dashboard</a>
         </header>
         <div id="page"></div>
-        <footer class="section flex">
+        <footer class="section col12 flex">
                 <a href="#/terms" class="footer-link">Terms</a>
                 <a href="#/contact" class="footer-link">Contact</a>
         </footer>
