--- a/www/index.html
+++ b/www/index.html
@@ -6,51 +6,20 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
-        <header class="header col12">
+        <header class="header section">
             <a class="logo" href="#/">
-                Garden Spruce
-                <!--<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 447.91 92.7">
-                    <defs>
-                        <style>.cls-1{fill:none;}.cls-1,.cls-4{stroke:#000;stroke-miterlimit:10;stroke-width:1.9px;}.cls-2{clip-path:url(#clip-path);}.cls-3,.cls-4{fill:#fff;}</style>
-                        <clipPath id="clip-path"><circle class="cls-1" cx="37.5" cy="42.44" r="36.55"/></clipPath>
-                    </defs>
-                    <g id="Layer_1-2" data-name="Layer 1"><g class="cls-2">
-                        <circle class="cls-1" cx="69.34" cy="60.41" r="31.33" transform="translate(-12.19 17.86) rotate(-13.5)"/>
-                        <path class="cls-1" d="M26.4,49.39A31.21,31.21,0,0,1,38.87,67.73"/>
-                        <ellipse class="cls-3" cx="74.04" cy="25.83" rx="26.56" ry="25.83"/>
-                        </g><circle class="cls-1" cx="37.5" cy="42.44" r="36.55"/>
-                        <path class="cls-4" d="M24.66,48.07c7.91,5.27,12.23-3.13,12.23-3.13C29,39.67,24.66,48.07,24.66,48.07Z"/>
-                        <path class="cls-4" d="M12.43,51.2c7.91,5.27,12.23-3.13,12.23-3.13C16.75,42.8,12.43,51.2,12.43,51.2Z"/>
-                        <path class="cls-4" d="M24.66,48.07c5.27-7.91-3.13-12.23-3.13-12.23C16.26,43.74,24.66,48.07,24.66,48.07Z"/>
-                        <path class="cls-4" d="M27.79,60.3c5.27-7.91-3.13-12.23-3.13-12.23C19.4,56,27.79,60.3,27.79,60.3Z"/>
-                        <path class="cls-4" d="M50.08,35.48c6.9,6.53,12.58-1,12.58-1C55.77,27.94,50.08,35.48,50.08,35.48Z"/>
-                        <path class="cls-4" d="M37.5,36.5c6.9,6.53,12.58-1,12.58-1C43.18,29,37.5,36.5,37.5,36.5Z"/>
-                        <path class="cls-4" d="M50.08,35.48c6.53-6.9-1-12.58-1-12.58C42.54,29.8,50.08,35.48,50.08,35.48Z"/>
-                        <path class="cls-4" d="M51.1,48.07c6.53-6.9-1-12.58-1-12.58C43.56,42.39,51.1,48.07,51.1,48.07Z"/>
-                        <path d="M118.64,43.22h17.14v1.41a8.76,8.76,0,0,0-3.85.57,2.82,2.82,0,0,0-1.33,1.9,37.54,37.54,0,0,0-.32,6.46v4.22a7.8,7.8,0,0,0-1.26-.12A17.84,17.84,0,0,0,123.09,59a26.35,26.35,0,0,1-9.23,1.88A19.26,19.26,0,0,1,94,41.08a22.52,22.52,0,0,1,5.39-14.94q5.39-6.42,14.65-6.42a16.89,16.89,0,0,1,13.18,5.86,13.89,13.89,0,0,0,1.23-4.42h1.41V34.43h-1.41a15.82,15.82,0,0,0-4.64-9.7,13,13,0,0,0-9.21-3.57,13.36,13.36,0,0,0-9.76,4.16q-4.16,4.16-4.16,14.77t4,15a12.92,12.92,0,0,0,10,4.41,12.2,12.2,0,0,0,5.54-1.25,7.24,7.24,0,0,0,3.4-3,9.92,9.92,0,0,0,.91-4.51,13.73,13.73,0,0,0-.42-4.26A2.42,2.42,0,0,0,122.8,45a9.54,9.54,0,0,0-3.22-.37h-.94Z"/>
-                        <path d="M161.24,55.79h1.08q-.26,5-4.92,5a4.5,4.5,0,0,1-3.15-1.05,5.28,5.28,0,0,1-1.51-3.13,30.58,30.58,0,0,1-5.35,3.13,11,11,0,0,1-4.32,1.05,6.5,6.5,0,0,1-4.19-1.41,4.53,4.53,0,0,1-1.76-3.72,6.55,6.55,0,0,1,2.94-5.27A36.29,36.29,0,0,1,148.2,46l4.54-1.85V43a14.31,14.31,0,0,0-.32-3.6,3.7,3.7,0,0,0-1.67-2,6.4,6.4,0,0,0-3.54-.88q-4.39,0-4.89,2.93t-2.46,3q-1.79,0-1.79-1.7t2.37-3.59q2.37-1.92,7.38-1.92a11.74,11.74,0,0,1,5.77,1.17,6.09,6.09,0,0,1,2.71,2.67,12,12,0,0,1,.66,4.57v9.7a16.34,16.34,0,0,0,.35,4.37,1.45,1.45,0,0,0,1.52,1Q160.77,58.66,161.24,55.79Zm-8.5-10.25-3.19,1.29Q142,49.9,142,54.56a4.41,4.41,0,0,0,1,3,3.16,3.16,0,0,0,2.52,1.13,7.34,7.34,0,0,0,3.19-.91A23.34,23.34,0,0,0,152.74,55Z"/>
-                        <path d="M172.93,41.34A10,10,0,0,1,176.16,37a7.15,7.15,0,0,1,4.38-1.76,4,4,0,0,1,3,1.2,3.63,3.63,0,0,1,1.11,2.46,2.08,2.08,0,0,1-.57,1.46,1.83,1.83,0,0,1-1.39.62q-1.46,0-2.23-2.17-.53-1.46-1.58-1.46a4.84,4.84,0,0,0-3,1.71,7.93,7.93,0,0,0-2.26,3.56,20.31,20.31,0,0,0-.5,5.07v4.28q0,3.84.1,4.83a2,2,0,0,0,.83,1.52,4.69,4.69,0,0,0,2.61.53h.82v1.35H164.78V58.83h.62a4.82,4.82,0,0,0,2.5-.48,1.94,1.94,0,0,0,.89-1.36,47,47,0,0,0,.15-5V45.18q0-3.87-.1-4.85a2.07,2.07,0,0,0-.83-1.52,4.58,4.58,0,0,0-2.61-.54h-.62V36.95A41.15,41.15,0,0,0,172,35.22,19.49,19.49,0,0,1,172.93,41.34Z"/>
-                        <path d="M206.76,38.74V29.36q0-3.84-.1-4.83a2,2,0,0,0-.83-1.52,4.69,4.69,0,0,0-2.61-.53h-.62V21.13a33,33,0,0,0,7.76-1.23H211V52.15a48.48,48.48,0,0,0,.15,5.1,1.8,1.8,0,0,0,.92,1.35,6.49,6.49,0,0,0,2.89.44v1.35a42.52,42.52,0,0,0-7.56.76,19.22,19.22,0,0,1-.35-4.34,16.07,16.07,0,0,1-4.47,3.25,11.05,11.05,0,0,1-4.76,1.08,10.48,10.48,0,0,1-8-3.75,13.08,13.08,0,0,1-3.38-9.08,13.15,13.15,0,0,1,3.46-9.48,11,11,0,0,1,8.23-3.62,12.13,12.13,0,0,1,4.6.88A13.82,13.82,0,0,1,206.76,38.74Zm0,1.7a15.1,15.1,0,0,0-3.88-2.5A9.86,9.86,0,0,0,199,37.1a7,7,0,0,0-5.52,2.55q-2.21,2.55-2.21,8.32t2.27,8.64a7,7,0,0,0,5.61,2.78,8.39,8.39,0,0,0,4.13-1.05,11.51,11.51,0,0,0,3.52-3.16Z"/>
-                        <path d="M237.06,44.3H220.33q-.12,1.73-.12,2.58,0,6.33,2,9.51a6.5,6.5,0,0,0,5.9,3.18,7.73,7.73,0,0,0,7.56-4.78h1.41a8.19,8.19,0,0,1-3.72,4.67,11.65,11.65,0,0,1-11.82.15,12.29,12.29,0,0,1-4.44-4.35,12.79,12.79,0,0,1-1.73-6.83A13.71,13.71,0,0,1,218.69,39,10.7,10.7,0,0,1,227,35.22a9.3,9.3,0,0,1,7.29,2.87A9.81,9.81,0,0,1,237.06,44.3Zm-5.13-1.17a9.4,9.4,0,0,0,.09-1.2,5,5,0,0,0-5.21-5.42q-5.33,0-6.36,6.62Z"/>
-                        <path d="M246.41,35.22h.79a16,16,0,0,1,.76,5,15.34,15.34,0,0,1,4.42-3.72,10.16,10.16,0,0,1,4.83-1.23,8.42,8.42,0,0,1,4.7,1.2,5.41,5.41,0,0,1,2.36,2.94,18.61,18.61,0,0,1,.53,5.08v7.5A48,48,0,0,0,265,57a1.84,1.84,0,0,0,.92,1.36,6.2,6.2,0,0,0,2.86.45v1.35H256.46V58.83H257a4.23,4.23,0,0,0,2.75-.62,2.28,2.28,0,0,0,.73-1.44q.09-.82.09-4.83V44.22a20.5,20.5,0,0,0-.28-4.06A3.8,3.8,0,0,0,258.81,38a4.91,4.91,0,0,0-3.09-.94,7.35,7.35,0,0,0-4.09,1.27A13.57,13.57,0,0,0,248,42.16v9.79a43.69,43.69,0,0,0,.16,5.07,1.88,1.88,0,0,0,.94,1.36,6.29,6.29,0,0,0,2.89.45v1.35H239.81V58.83a6.71,6.71,0,0,0,2.81-.41,1.8,1.8,0,0,0,1-1.25,37.93,37.93,0,0,0,.19-5.23V44.8a43.66,43.66,0,0,0-.16-5.08,1.88,1.88,0,0,0-.94-1.35,6.3,6.3,0,0,0-2.89-.45V36.57A37.65,37.65,0,0,0,246.41,35.22Z"/>
-                        <path d="M288.48,59.77V47h1.46q2.49,12.48,11.81,12.48a8.59,8.59,0,0,0,6.49-2.39,7.53,7.53,0,0,0,2.3-5.35,6.8,6.8,0,0,0-2-5q-2-2-7.38-4.28a54.19,54.19,0,0,1-7.21-3.59,10.94,10.94,0,0,1-3.79-4,10.66,10.66,0,0,1-1.36-5.24,9.4,9.4,0,0,1,2.94-7.08,10.33,10.33,0,0,1,7.46-2.83,13.63,13.63,0,0,1,4.75.82,12.15,12.15,0,0,1,4.57,3.4A6.28,6.28,0,0,0,310,20.46h1.29v10.4H310a14,14,0,0,0-3.94-7.15,9.36,9.36,0,0,0-6.55-2.61q-3.54,0-5.2,1.92a6.3,6.3,0,0,0-1.66,4.2,6.07,6.07,0,0,0,2.08,4.66,28.31,28.31,0,0,0,7.41,4.34,77,77,0,0,1,7.46,3.68,10.41,10.41,0,0,1,3.74,3.85,11.25,11.25,0,0,1,1.41,5.68,10.86,10.86,0,0,1-3.4,8.29,12.72,12.72,0,0,1-9.08,3.19,13.86,13.86,0,0,1-10.9-5,10,10,0,0,0-1.44,3.87Z"/>
-                        <path d="M323.72,35.22h.79a13.74,13.74,0,0,1,.5,4,12.92,12.92,0,0,1,4-3,11.4,11.4,0,0,1,12.85,2.52A12.9,12.9,0,0,1,345.2,48a13.72,13.72,0,0,1-3.33,9.4,11.09,11.09,0,0,1-8.75,3.78,10.5,10.5,0,0,1-4.26-.89A13.16,13.16,0,0,1,325,57.6v9.11a43.7,43.7,0,0,0,.16,5.07,1.9,1.9,0,0,0,.92,1.36,6.11,6.11,0,0,0,2.84.45v1.35H316.4V73.6h.88A4.18,4.18,0,0,0,320,73a2.33,2.33,0,0,0,.73-1.44q.1-.83.1-4.85V44.92q0-3.84-.1-4.83a2,2,0,0,0-.83-1.52,4.69,4.69,0,0,0-2.61-.53h-.88V36.69A48.93,48.93,0,0,0,323.72,35.22ZM325,55.67a11.78,11.78,0,0,0,3.35,2.92,7.59,7.59,0,0,0,3.74,1,7.43,7.43,0,0,0,5.77-2.84q2.46-2.84,2.46-9.05,0-5.39-2.37-8.06a7.33,7.33,0,0,0-5.65-2.67,7.69,7.69,0,0,0-3.84,1A12,12,0,0,0,325,41.08Z"/>
-                        <path d="M356.36,41.34A10,10,0,0,1,359.6,37,7.15,7.15,0,0,1,364,35.22a4,4,0,0,1,3,1.2,3.63,3.63,0,0,1,1.11,2.46,2.08,2.08,0,0,1-.57,1.46,1.83,1.83,0,0,1-1.39.62q-1.46,0-2.23-2.17-.53-1.46-1.58-1.46a4.84,4.84,0,0,0-3,1.71,7.93,7.93,0,0,0-2.26,3.56,20.31,20.31,0,0,0-.5,5.07v4.28q0,3.84.1,4.83a2,2,0,0,0,.83,1.52,4.69,4.69,0,0,0,2.61.53H361v1.35H348.21V58.83h.62a4.82,4.82,0,0,0,2.5-.48,1.94,1.94,0,0,0,.89-1.36,47,47,0,0,0,.15-5V45.18q0-3.87-.1-4.85a2.07,2.07,0,0,0-.83-1.52,4.58,4.58,0,0,0-2.61-.54h-.62V36.95a41.15,41.15,0,0,0,7.21-1.73A19.49,19.49,0,0,1,356.36,41.34Z"/>
-                        <path d="M394.33,36.19V51.92q0,3.93.12,4.92a2,2,0,0,0,.86,1.49,5.15,5.15,0,0,0,2.68.5v1.35a18.3,18.3,0,0,0-6.5.94h-.35q-.94-1.61-1-5.57a13,13,0,0,1-4.09,4.19A9.55,9.55,0,0,1,381,61.15a8.15,8.15,0,0,1-4.25-1.1,5.93,5.93,0,0,1-2.53-2.68,12.58,12.58,0,0,1-.69-4.78V44.42a48.54,48.54,0,0,0-.15-5.08,1.81,1.81,0,0,0-.92-1.36,6.39,6.39,0,0,0-2.86-.44V36.19h8.14V52.83A15.51,15.51,0,0,0,378,56.4a3.48,3.48,0,0,0,1.49,1.95,4.75,4.75,0,0,0,2.78.83,7.25,7.25,0,0,0,4.31-1.48,8.17,8.17,0,0,0,2.8-3.13,11.86,11.86,0,0,0,.75-4.73V44.42q0-3.93-.09-4.78a2.33,2.33,0,0,0-.75-1.48,4.16,4.16,0,0,0-2.74-.63h-.62V36.19Z"/>
-                        <path d="M421.25,54.32h1.29q-2,6.83-10,6.83A11.75,11.75,0,0,1,404,57.66a12.45,12.45,0,0,1-3.5-9.23,12.7,12.7,0,0,1,3.78-9.55,12.41,12.41,0,0,1,8.94-3.66,12.15,12.15,0,0,1,5.71,1.36q2.61,1.36,2.61,3.33a2.25,2.25,0,0,1-.48,1.38,1.63,1.63,0,0,1-1.39.64q-1.93,0-2.37-2.26a4.41,4.41,0,0,0-1.08-2.37,4.65,4.65,0,0,0-3-.67,6.82,6.82,0,0,0-5.9,2.72q-2,2.72-2,8.2,0,5.65,2.12,8.85a7.2,7.2,0,0,0,6.43,3.19Q419.67,59.6,421.25,54.32Z"/>
-                        <path d="M447.91,44.3H431.19q-.12,1.73-.12,2.58,0,6.33,2,9.51a6.5,6.5,0,0,0,5.9,3.18,7.73,7.73,0,0,0,7.56-4.78h1.41a8.19,8.19,0,0,1-3.72,4.67,11.65,11.65,0,0,1-11.82.15,12.29,12.29,0,0,1-4.44-4.35,12.79,12.79,0,0,1-1.73-6.83A13.71,13.71,0,0,1,429.54,39a10.7,10.7,0,0,1,8.35-3.76,9.3,9.3,0,0,1,7.29,2.87A9.81,9.81,0,0,1,447.91,44.3Zm-5.13-1.17a9.4,9.4,0,0,0,.09-1.2,5,5,0,0,0-5.21-5.42q-5.33,0-6.36,6.62Z"/>
-                    </g></g>
-                </svg>-->
+                <div class="logo-image"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.64 50.73"><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path d="M31.64,32.25l-4.21-8.6-1.35.66,1.35-.66-3.72-7.59h0L15.85,0,7.93,16.05l1.35.66-1.35-.66L4.21,23.65h0L0,32.25l14.29,13.1v5.38h3V45.4Zm-7.06-7.6-7.28,6.67V25.4l5.28-4.84ZM28,31.55,17.29,41.32V35.4L26,27.46ZM22.36,16.72,21,17.38l.18.37-3.9,3.58V9.78L21,17.38ZM14.29,9.93V21.28l-3.85-3.53.18-.37h0ZM9.06,20.56l5.23,4.79v5.93L7.06,24.65ZM6.19,24.62h0l-.63-.31Zm-.51,2.84,8.61,7.89v5.93L3.68,31.55Z"/></g></g></svg></div>
+                <div class="logo-text">Garden Spruce</div>
             </a>
             <a href="#/about" class="header-link flt-right">About</a>
             <a href="#/service" class="header-link">How It Works</a>
             <a href="#/portfolio" class="header-link">Portfolio</a>
             <a href="#/login" class="header-link login-link" id="login-link">Log In</a>
             <a href="#/logout" class="header-link logout-link" id="logout-link">Log Out</a>
-            <a href="#/dashboard" role="button" class="btn dashboard-link header-link">Dashboard</a>
+            <a href="#/dashboard" role="button" class="button-std dashboard-link header-link">Dashboard</a>
         </header>
         <div id="page"></div>
-        <footer class="section col12 flex">
+        <footer class="section col12">
                 <a href="#/terms" class="footer-link">Terms</a>
                 <a href="#/contact" class="footer-link">Contact</a>
         </footer>
@@ -72,8 +41,8 @@
         <script src="pages/post.js"></script>
         <script src="pages/mag.js"></script>
         <script src="pages/portfolio.js"></script>
+        <script src="pages/project.js"></script>
         <script src="pages/login.js"></script>
-        <script src="pages/create-account.js"></script>
         <script src="pages/logout.js"></script>
         <script src="pages/signup.js"></script>
         <script src="pages/service.js"></script>
